# uqam_api

./: README.md
api/: Cargo.toml
api/src/: main.rs
scraper/: Cargo.toml  out.json
scraper/src/: main.rs
uqam_scraper/: Cargo.toml
uqam_scraper/src/: course.rs  main.rs
